# opensky-api

./: .gitignore  README.md  context7.json  flight-response.html  genindex.html  index.html  java.html  objects.inv  py-modindex.html  python.html  rest-states-all-request.html  rest.html  search.html  searchindex.js  state-vectors.html  states-response.html  track-response.html  trino.html
.github/workflows/: main.yml
_sources/: flight-response.rst.txt  index.rst.txt  java.rst.txt  python.rst.txt  rest-states-all-request.rst.txt  rest.rst.txt  state-vectors.rst.txt  states-response.rst.txt  track-response.rst.txt  trino.rst.txt
_static/: documentation_options.js
docs/: Makefile  README.md  conf.py  index.rst  make.bat  python.rst  rest.rst  state_vectors.rst
docs/free/: Makefile  conf.py  index.rst  java.rst  python.rst  rest-states-all-request.rst  rest.rst  state-vectors.rst  states-response.rst  track-response.rst  trino.rst
docs/free/_extra/: context7.json
docs/mashape/: Makefile  conf.py  index.rst
docs/mashape/_static/: custom.css
java/: pom.xml
java/src/test/java/: TestOpenSkyApi.java  TestOpenSkyStatesDeserializer.java
javadoc/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
python/: README.md  example.py  opensky_api.py  pyproject.toml  setup.py  test_opensky_api.py
(+28 files in other folders)
